# ecm-preprocess-1

./: .gitignore  README.md  img_summary_gen.py  main.py  merge_image_summaries_into_chunks.py  pyproject.toml  run_full_preprocess.py  setup_qwen.sh  setup_qwen_env.sh  start.sh  start_preprocessing.sh  start_runpod.sh  test.py
config/: __init__.py  configs.py  settings.py
data_store/raw/: 2장_v3.1.docx  5장_v3.docx  ~$장_v3.1.docx
ecminer_manual/: 1장_v3.1.docx  2장_v3.1.docx  Appendix_v2.docx
infra/: vectorizer.py  vectorstore.py
output/processed/1장_v3.1/v0/_chunked/: 1장_v3.1_chunked.json  1장_v3.1_chunked_with_imgsum.json
output/processed/1장_v3.1/v0/_comp/: image_comp.json  list_comp.json  ocr_cache.json  parag_comp.json  table_comp.json
scripts/: init_index.py  sample_image_summaries.py
src/mypkg/cli/: main.py
src/mypkg/components/: paragraph_post.py
src/mypkg/components/analyzer/: document_metadata_analyzer.py  layout_assembler.py  list_table_analyzer.py  section_analyzer.py
src/mypkg/components/parser/: xml_parser.py
src/mypkg/components/sanitizer/: image_sanitizer.py  list_sanitizer.py  paragraph_sanitizer.py  table_sanitizer.py
src/mypkg/core/: docjson_types.py  io.py  parser.py
src/mypkg/core/config/: docjson_config.py  section_config.py
src/mypkg/pipelines/: chunking.py  docx_parsing_pipeline.py  img_summary_gen.py  layout_analyzer_pipeline.py  merge_image_summaries_into_chunks.py
tests/: test_core_io.py  test_docjson_types.py  test_document_metadata_analyzer.py  test_docx_inline_images.py
utils/: embedding_helpers.py
(+26 files in other folders)
